--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <h1>The Big Picture</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>
+                <h1>Jobs to Skills</h1>
+                <p>This website will give you a test that tests for personality
+                  traits and tries to find jobs for that.</p>
             </div>
         </div>
         <!-- /.row -->
