--- a/account.html
+++ b/account.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                      <a href="hoya.html">Quiz</a>
+                        <a href="index.html">Homepage</a>
                     </li>
                     <li>
                         <a href="#">Services</a>
@@ -65,7 +65,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <h1>Jobs to Skills</h1>
+                <h1>Fill out the quiz</h1>
                 <p>This website will give you a test that tests for personality
                   traits and tries to find jobs for that.</p>
                   <button type="button" class="btn btn-default">sign in</button>
