--- a/account.html
+++ b/account.html
@@ -49,10 +49,10 @@
                         <a href="index.html">Homepage</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="hoya.html">Quiz</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="Buisness.html">Buisness</a>
                     </li>
                 </ul>
             </div>
