--- a/account.html
+++ b/account.html
@@ -65,7 +65,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <h1>Fill out the quiz</h1>
+                <h1>Manage your account here.</h1>
                 <p>This website will give you a test that tests for personality
                   traits and tries to find jobs for that.</p>
                   <button type="button" class="btn btn-default">sign in</button>
