--- a/hoya.html
+++ b/hoya.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="hoya.html">Homepage</a>
+                        <a href="index.html">Homepage</a>
                     </li>
                     <li>
                         <a href="account.html">Account</a>
