--- a/account.html
+++ b/account.html
@@ -52,7 +52,7 @@
                         <a href="hoya.html">Quiz</a>
                     </li>
                     <li>
-                        <a href="Buisness.html">Buisness</a>
+                        <a href="realBuisness.html">Buisness</a>
                     </li>
                 </ul>
             </div>
