--- a/hoya.html
+++ b/hoya.html
@@ -52,7 +52,7 @@
                         <a href="account.html">Account</a>
                     </li>
                     <li>
-                        <a href="Buisness.html">Buisness</a>
+                        <a href="realBuisness.html">Buisness</a>
                     </li>
                 </ul>
             </div>
