--- a/realBuisness.html
+++ b/realBuisness.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Small Business - Start Bootstrap Template</title>
+    <title>Buisness</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -50,7 +50,7 @@
                         <a href="index.html">HomePage</a>
                     </li>
                     <li>
-                        <a href="#hoya.html">Quiz</a>
+                        <a href="hoya.html">Quiz</a>
                     </li>
                     <li>
                         <a href="account.html">Account</a>
@@ -68,7 +68,7 @@
         <!-- Heading Row -->
         <div class="row">
             <div class="col-md-8">
-                <img class="img-responsive img-rounded" src="http://placehold.it/900x350" alt="">
+                <img class="img-responsive img-rounded" src="peoples.jpeg" alt="">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
@@ -96,8 +96,8 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4">
-                <h2>Heading 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
+                <h2>Why hire refugees?</h2>
+                <p>Companies are more are qualified to recceive the Work Opportunity Tax Credit</p>
                 <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
