--- a/realBuisness.html
+++ b/realBuisness.html
@@ -68,7 +68,7 @@
         <!-- Heading Row -->
         <div class="row">
             <div class="col-md-8">
-                <img class="img-responsive img-rounded" src="peoples.jpeg" alt="">
+                <img class="img-responsive img-rounded" src="cover.jpeg" alt="">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
