--- a/account.html
+++ b/account.html
@@ -39,6 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <img class="img-responsive img-rounded" src="peoples.jpeg" alt="">
                 </button>
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
