--- a/account.html
+++ b/account.html
@@ -39,8 +39,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <img class="img-responsive img-rounded" src="peoples.jpeg" alt="">
-                </button>
+                    <div class="col-md-8">
+                        <img class="img-responsive img-rounded" src="cover.jpeg" alt="">
+                    </div>                </button>
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
