--- a/account.html
+++ b/account.html
@@ -32,6 +32,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
         <div class="container">
+          <img src="peoples.jpeg" class="img-fluid" alt="Responsive image">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -39,9 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <div class="col-md-8">
-                        <img class="img-responsive img-rounded" src="cover.jpeg" alt="">
-                    </div>                </button>
+                    </button>
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
