--- a/account.html
+++ b/account.html
@@ -28,8 +28,29 @@
 </head>
 
 <body>
-  <img src="peoples.jpeg" class="img-fluid" alt="Responsive image">
+  <h1>Bootstrap 3 Responsive Video Embeds that Maintain Aspect Ratio <i class="fa fa-heart"></i></h1>
 
+  <h4>Check out <a href="http://scotch.io">scotch.io</a> for more awesome web dev things</h4>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+
+        <h2>16:9 Responsive Aspect Ratio</h2>
+  <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="handshke.MOV"></iframe>
+  </div>
+      </div>
+      <div class="col-sm-6">
+
+
+<!--        <h2>4:3 Responsive Aspect Ratio</h2>
+  <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/ePbKGoIGAXY"></iframe>
+  </div>
+      </div>
+    </div>
+  </div> -->
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
         <div class="container">
