--- a/account.html
+++ b/account.html
@@ -37,8 +37,8 @@
       <div class="col-sm-6">
 
         <h2>16:9 Responsive Aspect Ratio</h2>
-  <div class="embed-responsive embed-responsive-16by9">
-      <iframe class="embed-responsive-item" src="handshke.MOV"></iframe>
+  <div class="embed-responsive embed-responsive-4by3">
+      <iframe src="handshke.MOV"></iframe>
   </div>
       </div>
       <div class="col-sm-6">
