--- a/account.html
+++ b/account.html
@@ -28,20 +28,10 @@
 </head>
 
 <body>
-  <h1>Bootstrap 3 Responsive Video Embeds that Maintain Aspect Ratio <i class="fa fa-heart"></i></h1>
-
-  <h4>Check out <a href="http://scotch.io">scotch.io</a> for more awesome web dev things</h4>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6">
-
-        <h2>16:9 Responsive Aspect Ratio</h2>
-  <div class="embed-responsive embed-responsive-4by3">
-      <iframe src="handshke.MOV"></iframe>
+  <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" width="640" height="480"
+      src="handshake.MOV" frameborder="0" allowfullscreen></iframe>
   </div>
-      </div>
-      <div class="col-sm-6">
 
 
 <!--        <h2>4:3 Responsive Aspect Ratio</h2>
