--- a/account.html
+++ b/account.html
@@ -30,7 +30,7 @@
 <body>
   <div class="embed-responsive embed-responsive-4by3">
       <iframe class="embed-responsive-item" width="50" height="30"
-      src="handshake.MOV" frameborder="0" allowfullscreen></iframe>
+      src="handshake.MOV" frameborder="0"></iframe>
   </div>
 
 
