--- a/account.html
+++ b/account.html
@@ -28,10 +28,16 @@
 </head>
 
 <body>
-  <div class="embed-responsive embed-responsive-16by9">
+  <div align="center" class="embed-responsive embed-responsive-16by9">
+    <video class="embed-responsive-item">
+        <source src="handshake.MOV">
+    </video>
+</div>
+
+  <!--<div class="embed-responsive embed-responsive-16by9">
       <iframe class="embed-responsive-item" width="10" height="5"
       src="handshake.MOV" frameborder="10"></iframe>
-  </div>
+  </div> -->
 
 
 <!--        <h2>4:3 Responsive Aspect Ratio</h2>
