--- a/account.html
+++ b/account.html
@@ -29,7 +29,7 @@
 
 <body>
   <div align="center" class="embed-responsive embed-responsive-16by9">
-    <video class="embed-responsive-item">
+    <video  controls muted class="embed-responsive-item">
         <source src="handshake.MOV">
     </video>
 </div>
