--- a/account.html
+++ b/account.html
@@ -29,8 +29,8 @@
 
 <body>
   <div align="center" class="embed-responsive embed-responsive-16by9">
-    <video  controls muted class="embed-responsive-item">
-        <source src="handshake.MOV">
+    <video  controls muted>
+        <source class="embed-responsive-item" src="handshake.MOV">
     </video>
 </div>
 
