--- a/account.html
+++ b/account.html
@@ -29,7 +29,7 @@
 
 <body>
   <div align="center" class="embed-responsive embed-responsive-16by9">
-    <video  controls muted>
+    <video  width = "320" height = "240" controls muted>
         <source class="embed-responsive-item" src="handshake.MOV">
     </video>
 </div>
