--- a/account.html
+++ b/account.html
@@ -83,12 +83,21 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <h1>Manage your account here.</h1>
-                <p>This website will give you a test that tests for personality
-                  traits and tries to find jobs for that.</p>
+                <h1>A Good Handshake</h1>
+                <p>Its accepatable in American culture for the man to initiate the handshake.</p>
                   <button type="button" class="btn btn-default">sign in</button>
 
             </div>
+            //adds the secound video
+            <div align="center" class="embed-responsive embed-responsive-16by9">
+              <video  width = "10" height = "5" controls muted>
+                  <source class="embed-responsive-item" src="no.MOV">
+              </video>
+              <div class="col-md-6 col-sm-12">
+                  <h1>NO Means NO</h1>
+                  <p>Its accepatable in American culture to say no.</p>
+                    <button type="button" class="btn btn-default">sign in</button>
+          </div>
         </div>
         <!-- /.row -->
     </div>
