--- a/account.html
+++ b/account.html
@@ -93,6 +93,7 @@
               <video  width = "10" height = "5" controls muted>
                   <source class="embed-responsive-item" src="no.MOV">
               </video>
+              </div>
               <div class="col-md-6 col-sm-12">
                   <h1>NO Means NO</h1>
                   <p>Its accepatable in American culture to say no.</p>
@@ -103,7 +104,7 @@
         <!-- /.row -->
     </div>
     <!-- /.container -->
-    
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
