--- a/account.html
+++ b/account.html
@@ -89,7 +89,7 @@
 
             </div>
 
-            <div align="center" class="embed-responsive embed-responsive-16by9">
+            <div class="embed-responsive embed-responsive-16by9">
               <video  width = "10" height = "5" controls muted>
                   <source class="embed-responsive-item" src="no.MOV">
               </video>
