--- a/account.html
+++ b/account.html
@@ -99,7 +99,11 @@
                   <p>Its accepatable in American culture to say no.</p>
 
           </div>
+          <div class="col-md-6 col-sm-12">
+              <h1></h1>
+              <p></p>
 
+          </div>
         </div>
         <!-- /.row -->
     </div>
