--- a/account.html
+++ b/account.html
@@ -33,6 +33,11 @@
         <source class="embed-responsive-item" src="handshake.MOV">
     </video>
 </div>
+<div class="embed-responsive embed-responsive-16by9">
+  <video  width = "10" height = "10" controls muted>
+      <source class="embed-responsive-item" src="no.MOV">
+  </video>
+  </div>
 
   <!--<div class="embed-responsive embed-responsive-16by9">
       <iframe class="embed-responsive-item" width="10" height="5"
@@ -98,7 +103,7 @@
                   <source class="embed-responsive-item" src="no.MOV">
               </video>
               </div>
-              
+
           <div class="col-md-6 col-sm-12">
               <h1></h1>
               <p></p>
