--- a/account.html
+++ b/account.html
@@ -82,13 +82,13 @@
                 <h1>A Good Handshake</h1>
                 <p>Its accepatable in American culture for the man to initiate the handshake.</p>
 
-                <div class="embed-responsive embed-responsive-16by9">
+                <div align="left" class="embed-responsive embed-responsive-16by9">
                   <video  width = "10" height = "5" controls muted>
                       <source class="embed-responsive-item" src="handshake.MOV">
                   </video>
               </div>
 
-              <div class="embed-responsive embed-responsive-16by9">
+              <div align="right" class="embed-responsive embed-responsive-16by9">
                 <video  width = "10" height = "10" controls muted>
                     <source class="embed-responsive-item" src="no.MOV">
                 </video>
