--- a/account.html
+++ b/account.html
@@ -68,6 +68,9 @@
                     <li>
                         <a href="realBuisness.html">Buisness</a>
                     </li>
+                    <li>
+                        <a href="info.html">Info</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -90,6 +93,7 @@
 
 
             </div>
+
             <div class="col-md-6 col-sm-12">
                 <h1>NO Means NO</h1>
                 <p>Its accepatable in American culture to say no.</p>
