--- a/Buisness.html
+++ b/Buisness.html
@@ -52,7 +52,7 @@
                         <a href="hoya.html">Quiz</a>
                     </li>
                     <li>
-                        <a href="account.html">Account</a>
+                        <a href="account.html">Culture</a>
                     </li>
                 </ul>
             </div>
