--- a/account.html
+++ b/account.html
@@ -53,6 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                     </button>
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
