--- a/hoya.html
+++ b/hoya.html
@@ -40,6 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
@@ -50,10 +51,13 @@
                         <a href="index.html">Homepage</a>
                     </li>
                     <li>
-                        <a href="account.html">Account</a>
+                        <a href="account.html">Culture</a>
                     </li>
                     <li>
                         <a href="realBuisness.html">Buisness</a>
+                    </li>
+                    <li>
+                        <a href="info.html">Info</a>
                     </li>
                 </ul>
             </div>
