--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
@@ -54,6 +55,9 @@
                     </li>
                     <li>
                         <a href="realBuisness.html">Buisness</a>
+                    </li>
+                    <li>
+                        <a href="info.html">Info</a>
                     </li>
                 </ul>
             </div>
