--- a/info.html
+++ b/info.html
@@ -40,6 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
@@ -70,7 +71,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <h1>Jobs to Skills</h1>              
+                <h1>Jobs to Skills</h1>
                 <div class="col-md-8">
                     <img class="img-responsive img-rounded" src="infograph.png" alt="">
                 </div>
