--- a/realBuisness.html
+++ b/realBuisness.html
@@ -38,6 +38,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
                     <img src="http://placehold.it/150x50&text=Logo" alt="">
@@ -53,7 +54,10 @@
                         <a href="hoya.html">Quiz</a>
                     </li>
                     <li>
-                        <a href="account.html">Account</a>
+                        <a href="account.html">Culture</a>
+                    </li>
+                    <li>
+                        <a href="info.html">Info</a>
                     </li>
                 </ul>
             </div>
