--- a/account.html
+++ b/account.html
@@ -84,7 +84,7 @@
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <h1>A Good Handshake</h1>
-                <p>Its accepatable in American culture for the man to initiate the handshake.</p>
+                <p>It's accepatable in American culture for the man to initiate the handshake.</p>
 
                 <div align="left" class="embed-responsive embed-responsive-16by9">
                   <video  width = "10" height = "5" controls muted>
