--- a/realBuisness.html
+++ b/realBuisness.html
@@ -76,9 +76,9 @@
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
-                <h1>Business Name or Tagline</h1>
-                <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-                <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
+                <h1>Open to Buisnesses</h1>
+                <p>This website creates a databese of people who have an aptitude for jobs
+                and allows compnaies easy access to these people.</p>
             </div>
             <!-- /.col-md-4 -->
         </div>
@@ -102,19 +102,19 @@
             <div class="col-md-4">
                 <h2>Why hire refugees?</h2>
                 <p>Companies are more are qualified to recceive the Work Opportunity Tax Credit</p>
-                <a class="btn btn-default" href="#">More Info</a>
+
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Heading 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
-                <a class="btn btn-default" href="#">More Info</a>
+                <h2>Why use this database?</h2>
+                <p>Take advatage of this dtabase to fill your jobs.</p>
+
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Heading 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
-                <a class="btn btn-default" href="#">More Info</a>
+                <h2>Partners</h2>
+                <p>Check out companies using our databses.</p>
+
             </div>
             <!-- /.col-md-4 -->
         </div>
