--- a/account.html
+++ b/account.html
@@ -67,7 +67,7 @@
                         <a href="hoya.html">Quiz</a>
                     </li>
                     <li>
-                        <a href="realBuisness.html">Buisness</a>
+                        <a href="realBuisness.html">Business</a>
                     </li>
                     <li>
                         <a href="info.html">Info</a>
