--- a/hoya.html
+++ b/hoya.html
@@ -54,7 +54,7 @@
                         <a href="account.html">Culture</a>
                     </li>
                     <li>
-                        <a href="realBuisness.html">Buisness</a>
+                        <a href="realBuisness.html">Business</a>
                     </li>
                     <li>
                         <a href="info.html">Info</a>
@@ -65,6 +65,7 @@
         </div>
         <!-- /.container -->
     </nav>
+<div style = background-image: src "quiz.jpeg";>
 
     <!-- Page Content -->
     <div class="container">
@@ -80,7 +81,7 @@
         <!-- /.row -->
     </div>
     <!-- /.container -->
-
+</div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
