--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Buisness Application</title>
+    <title>Business Application</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -54,7 +54,7 @@
                         <a href="account.html">Account</a>
                     </li>
                     <li>
-                        <a href="realBuisness.html">Buisness</a>
+                        <a href="realBuisness.html">Business</a>
                     </li>
                     <li>
                         <a href="info.html">Info</a>
