--- a/info.html
+++ b/info.html
@@ -57,7 +57,7 @@
                         <a href="account.html">Culture</a>
                     </li>
                     <li>
-                        <a href="realBuisness.html">Buisness</a>
+                        <a href="realBuisness.html">Business</a>
                     </li>
 
                 </ul>
