--- a/hoya.html
+++ b/hoya.html
@@ -73,7 +73,8 @@
             <div class="col-md-6 col-sm-12">
                 <h1>Fill out the quiz</h1>
                 <p>This website will give you a test that tests for personality
-                  traits and tries to find jobs for that.</p>
+                  traits and tries to find jobs for that. <a href = "url" >
+                    https://www.sokanu.com/about/ </a></p>
                   <button type="button" class="btn btn-default">sign in</button>
 
             </div>
