--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
                 <h1>Jobs to Skills</h1>
                 <p>This website will give you a test that tests for personality
                   traits and tries to find jobs for that.</p>
-                  <button type="button" class="btn btn-default">sign in</button>
-
+                  <div class="col-md-8">
+                      <img class="img-responsive img-rounded" src="Homepage.jpeg" alt="">
+                  </div>
             </div>
         </div>
         <!-- /.row -->
