fix account links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                       <a href="hoya.html">Quiz</a>
                     </li>
                     <li>
-                        <a href="account.html">Account</a>
+                        <a href="account.html">Culture</a>
                     </li>
                     <li>
                         <a href="realBuisness.html">Business</a>
@@ -70,9 +70,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <h1>Jobs to Skills</h1>
-                <p>This website will give you a test that tests for personality
-                  traits and tries to find jobs for that.</p>
+
                   <div class="col-md-8">
                       <img class="img-responsive img-rounded" src="Homepage.jpeg" alt="">
                   </div>
