--- a/hoya.html
+++ b/hoya.html
@@ -51,6 +51,9 @@
                         <a href="index.html">Homepage</a>
                     </li>
                     <li>
+                      <a href="hoya.html">Quiz</a>
+                    </li>
+                    <li>
                         <a href="account.html">Culture</a>
                     </li>
                     <li>
