--- a/account.html
+++ b/account.html
@@ -54,6 +54,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                     </button>
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
@@ -65,6 +66,9 @@
                     </li>
                     <li>
                         <a href="hoya.html">Quiz</a>
+                    </li>
+                    <li>
+                      <a href="account.html">Culture</a>
                     </li>
                     <li>
                         <a href="realBuisness.html">Business</a>
