--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                  <li>
+                    <a href="index.html">Homepage</a>
+                  </li>
                     <li>
                       <a href="hoya.html">Quiz</a>
                     </li>
