--- a/info.html
+++ b/info.html
@@ -41,6 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
@@ -59,6 +60,9 @@
                     <li>
                         <a href="realBuisness.html">Business</a>
                     </li>
+                    <li>
+                      <a href="info.html">Info</a>
+                    </li>
 
                 </ul>
             </div>
@@ -71,7 +75,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                
+
                 <div class="col-md-8">
                     <img class="img-responsive img-rounded" src="infograph.png" alt="">
                 </div>
