--- a/realBuisness.html
+++ b/realBuisness.html
@@ -39,6 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
                     <img src="http://placehold.it/150x50&text=Logo" alt="">
@@ -55,6 +56,9 @@
                     </li>
                     <li>
                         <a href="account.html">Culture</a>
+                        <li>
+                          <a href="realBuisness.html">Business</a>
+                        </li>
                     </li>
                     <li>
                         <a href="info.html">Info</a>
