--- a/hoya.html
+++ b/hoya.html
@@ -68,7 +68,7 @@
         </div>
         <!-- /.container -->
     </nav>
-<div style = background-image: src "quiz.jpeg";>
+<div style = background-image: url "quiz.jpeg";>
 
     <!-- Page Content -->
     <div class="container">
