--- a/hoya.html
+++ b/hoya.html
@@ -27,7 +27,9 @@
 
 </head>
 
-<body>
+<body
+  background-image: url('quiz.jpg');
+>
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
