--- a/hoya.html
+++ b/hoya.html
@@ -70,7 +70,7 @@
         </div>
         <!-- /.container -->
     </nav>
-<div style = background-image: url "quiz.jpg";>
+<div  background-image: url "quiz.jpg";>
 
     <!-- Page Content -->
     <div class="container">
