--- a/hoya.html
+++ b/hoya.html
@@ -28,7 +28,7 @@
 </head>
 
 <body
-  background-image: url('quiz.jpg');
+  background-image: ('quiz.jpg');
 >
 
     <!-- Navigation -->
@@ -80,7 +80,7 @@
                 <p>This website will give you a test that tests for personality
                   traits and tries to find jobs for that. <a href = "url" >
                     https://www.sokanu.com/about/ </a></p>
-                  <button type="button" class="btn btn-default">sign in</button>
+
 
             </div>
         </div>
