--- a/hoya.html
+++ b/hoya.html
@@ -27,9 +27,9 @@
 
 </head>
 
-<body
+<body>
   background-image: ("quiz.jpg");
->
+
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
@@ -70,7 +70,7 @@
         </div>
         <!-- /.container -->
     </nav>
-<div  background-image: url "quiz.jpg";>
+<div  background: url "quiz.jpg";>
 
     <!-- Page Content -->
     <div class="container">
