--- a/hoya.html
+++ b/hoya.html
@@ -27,9 +27,9 @@
 
 </head>
 
-<body>
-  background-image: ("quiz.jpg");
-
+<body
+  background: ("quiz.jpg");
+>
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
