--- a/hoya.html
+++ b/hoya.html
@@ -28,8 +28,8 @@
 </head>
 
 <body
-  background: ("quiz.jpg");
-  background-size:100%;
+  background: url ("quiz.jpg");
+
 >
 
     <!-- Navigation -->
@@ -71,7 +71,7 @@
         </div>
         <!-- /.container -->
     </nav>
-<div  background: url "quiz.jpg";>
+<div>
 
     <!-- Page Content -->
     <div class="container">
