--- a/hoya.html
+++ b/hoya.html
@@ -29,7 +29,6 @@
 
 <body
   background: url ("quiz.jpg");
-
 >
 
     <!-- Navigation -->
@@ -74,7 +73,7 @@
 <div>
 
     <!-- Page Content -->
-    <div class="container">
+    <div background: url ("quiz.jpg");class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <h1>Fill out the quiz</h1>
