--- a/hoya.html
+++ b/hoya.html
@@ -78,8 +78,8 @@
             <div class="col-md-6 col-sm-12">
                 <h1>Fill out the quiz</h1>
                 <p>This website will give you a test that tests for personality
-                  traits and tries to find jobs for that. <a href = "url" >
-                    www.sokanu.com </a></p>
+                  traits and tries to find jobs for that.
+                  <a href = "https://www.sokanu.com/about/ " > sokanu.com </a></p>
 
 
             </div>
