--- a/hoya.html
+++ b/hoya.html
@@ -79,7 +79,7 @@
                 <h1>Fill out the quiz</h1>
                 <p>This website will give you a test that tests for personality
                   traits and tries to find jobs for that.
-                  <a href = "https://www.sokanu.com/about/ " > sokanu.com </a></p>
+                  <a href = "https://www.sokanu.com " > sokanu.com </a></p>
 
 
             </div>
