image in background

--- a/hoya.html
+++ b/hoya.html
@@ -26,10 +26,14 @@
     <![endif]-->
 
 </head>
-
-<body
-  background: url ("quiz.jpg");
->
+<body> {
+     margin: 0;
+     background: url('https://www.google.com/images/srpr/logo3w.png');
+     background-size: 1440px 800px;
+     background-repeat:no-repeat;
+    display: compact;
+  }
+<body>
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
