--- a/hoya.html
+++ b/hoya.html
@@ -77,7 +77,7 @@
 <div>
 
     <!-- Page Content -->
-    <div background: url ("quiz.jpg");class="container">
+    <div background: url ('quiz.jpg');class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <h1>Fill out the quiz</h1>
