--- a/hoya.html
+++ b/hoya.html
@@ -26,13 +26,13 @@
     <![endif]-->
 
 </head>
-<body> {
+<body {
      margin: 0;
      background: url('https://www.google.com/images/srpr/logo3w.png');
      background-size: 1440px 800px;
      background-repeat:no-repeat;
     display: compact;
-  }
+  }>
 <body>
 
     <!-- Navigation -->
