--- a/hoya.html
+++ b/hoya.html
@@ -33,7 +33,6 @@
      background-repeat:no-repeat;
     display: compact;
   }>
-<body>
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
@@ -77,7 +76,7 @@
 <div>
 
     <!-- Page Content -->
-    <div background: url ('quiz.jpg');class="container">
+    <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <h1>Fill out the quiz</h1>
