--- a/hoya.html
+++ b/hoya.html
@@ -26,13 +26,7 @@
     <![endif]-->
 
 </head>
-<body {
-     margin: 0;
-     background: url('https://www.google.com/images/srpr/logo3w.png');
-     background-size: 1440px 800px;
-     background-repeat:no-repeat;
-    display: compact;
-  }>
+<body>
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
@@ -83,8 +77,9 @@
                 <p>This website will give you a test that tests for personality
                   traits and tries to find jobs for that.
                   <a href = "https://www.sokanu.com " > sokanu.com </a></p>
-
-
+            </div>
+            <div class="col-md-8">
+                <img class="img-responsive img-rounded" src="quiz.jpeg" alt="">
             </div>
         </div>
         <!-- /.row -->
