--- a/hoya.html
+++ b/hoya.html
@@ -79,7 +79,7 @@
                   <a href = "https://www.sokanu.com " > sokanu.com </a></p>
             </div>
             <div class="col-md-8">
-                <img class="img-responsive img-rounded" src="quiz.jpeg" alt="">
+                <img class="img-responsive img-rounded" src="quiz2.jpg" alt="">
             </div>
         </div>
         <!-- /.row -->
